<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ap="http://schemas.android.com/apk/res/com.matao.matao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_720x1280" >

    <LinearLayout
        android:id="@+id/favorable_page"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="49dp"
        android:background="#FFFEFA"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/favorable_page1"
            style="@style/tab_text"
            android:layout_weight="0.7"
            android:text="@string/new_favorable"
            android:textColor="#ff74bf" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="15dp"
            android:layout_weight="0.005"
            android:background="@color/color_all_line" />

        <TextView
            android:id="@+id/favorable_page2"
            style="@style/tab_text"
            android:text="@string/brand_authorzing" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="15dp"
            android:layout_weight="0.005"
            android:background="@color/color_all_line" />

        <TextView
            android:id="@+id/favorable_page22"
            style="@style/tab_text"
            android:layout_weight="0.7"
            android:text="9块9" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="15dp"
            android:layout_weight="0.005"
            android:background="@color/color_all_line" />

        <TextView
            android:id="@+id/favorable_page3"
            style="@style/tab_text"
            android:text="@string/super_offer" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="15dp"
            android:layout_weight="0.005"
            android:background="@color/color_all_line" />

        <LinearLayout
            android:id="@+id/favorable_shaixuan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/screen" >

            <ImageView
                android:id="@+id/favorable_page4_ico"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ico_filter_default" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    android:id="@+id/favorable_page4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen"
                    android:textColor="#999999"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/favorable_page4_dot"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_alignTop="@id/favorable_page4"
                    android:layout_marginTop="-2dp"
                    android:layout_toRightOf="@id/favorable_page4"
                    android:src="@drawable/ico_filter_dot"
                    android:visibility="invisible" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_alignBottom="@id/favorable_page" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_all_line" />

        <LinearLayout
            android:id="@+id/imglayout"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/favorable_page1_icon"
                style="@style/tab_img"
                android:layout_weight="0.7"
                android:src="@drawable/line_2_selected" />

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="2dp"
                android:layout_weight="0.005" />

            <ImageView
                android:id="@+id/favorable_page2_icon"
                style="@style/tab_img" />

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="2dp"
                android:layout_weight="0.005" />

            <ImageView
                android:id="@+id/favorable_page22_icon"
                style="@style/tab_img"
                android:layout_weight="0.7" />

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="2dp"
                android:layout_weight="0.005" />

            <ImageView
                android:id="@+id/favorable_page3_icon"
                style="@style/tab_img" />

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="2dp"
                android:layout_weight="0.005" />

            <ImageView
                android:id="@+id/favorable_page4_icon"
                style="@style/tab_img"
                android:layout_height="9dp"
                android:scaleType="fitCenter" />
        </LinearLayout>
    </RelativeLayout>

    <com.matao.view.TopBar
        android:id="@+id/favorable_topbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/nav_bg"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        ap:leftH="49dp"
        ap:leftImg="@drawable/nav_ico_search"
        ap:leftW="49dp"
        ap:rightH="49dp"
        ap:rightImg="@drawable/nav_ico_user"
        ap:rightW="49dp"
        ap:titleText="优惠" />

    <android.support.v4.view.ViewPager
        android:id="@+id/favorable_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/favorable_page" />

</RelativeLayout>