<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fffefa"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp" >

        <LinearLayout
            android:id="@+id/ta_click1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ff74bf"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/t11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/show"
                android:textColor="#ff74bf"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="0.005"
            android:background="@color/color_all_line" />

        <LinearLayout
            android:id="@+id/ta_click2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#999999"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/t22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/experience"
                android:textColor="#999999"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="0.005"
            android:background="@color/color_all_line" />

        <LinearLayout
            android:id="@+id/ta_click3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="onClick"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#999999"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/t33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/like"
                android:textColor="#999999"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imglayout"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#fffefa"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/favorable_page1_icon"
            style="@style/tab_img"
            android:src="@drawable/line_2_selected" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="2dp"
            android:layout_weight="0.005" />

        <ImageView
            android:id="@+id/favorable_page2_icon"
            style="@style/tab_img" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="2dp"
            android:layout_weight="0.005" />

        <ImageView
            android:id="@+id/favorable_page3_icon"
            style="@style/tab_img" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_all_line" />

</LinearLayout>